--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,13 +11,42 @@
 .side_top {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user_name a {
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.chat_create a{
+font-size: 10px;
+color: deepskyblue;
+border: 1px solid lightblue;
+text-decoration: none;
+padding: 14px ;
 }
 
 .rooms {
 height: calc(100vh - 100px);
 background-color: #2F3E51;
 padding: 0 20px;
+overflow: scroll;
 }
+
+.room {
+  padding: 20px 0 40px;
+ }
+
+
+ .room_name a {
+  text-decoration: none;
+  color: white;
+ }
+
 
 .main {
   width: calc(100vw - 300px);
