--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -56,7 +56,27 @@ overflow: scroll;
 .chat_top {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.chat_room {
+  margin-top: 36px;
+  font-size: 24px;
+  color: #333;
+}
+
+.chat_end {
+  margin-top: 40px;
+}
+
+.chat_end a {
+  text-decoration: none;  
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+}
+
 
 .messages {
   background-color: #FAFAFA;
@@ -64,8 +84,77 @@ overflow: scroll;
   padding-top: 46px 40px 0;
 }
 
+.message {
+  margin: 10px 0 0 0;
+}
+
+.upper-message{
+  display: flex;
+}
+
+.message-user {
+  color: #434a54;
+  font-size: 16px;
+}
+
+.message-date {
+  color: #999;
+  font-size: 12px;
+  padding-left: 10px;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
+
+
 .chat_bottom {
 background-color: #DDDDDD;
 height: 90px;
 padding: 20px 40px;
+display: flex;
+}
+
+.form-input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-submit {
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
