--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -9,7 +9,7 @@
 <div class="rooms">
 <% current_user.rooms.each do |room| %>
     <div class="room">
-      <div class="room＿name">
+      <div class="room_name">
         <a href="#"><%= room.name %></a>
       </div>
     </div>
