--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,15 +1,15 @@
-<div class="side_top">
-  <div class="user_name">
+<div class="side-bar-header">
+  <div class="header-name">
     <%= link_to current_user.name, edit_user_path(current_user) %>
   </div>
-  <div class="chat_create">
+  <div class="create-room">
      <%= link_to "チャットを作成する", new_room_path %>
   </div>
 </div>
 <div class="rooms">
 <% current_user.rooms.each do |room| %>
     <div class="room">
-      <div class="room_name">
+      <div class="room-name">
         <a href="#"><%= room.name %></a>
       </div>
     </div>
